# ray-tracing

./: CMakeLists.txt
example/: README.md  bathroom2.exr  cornell-box.exr  veach-mis.exr
example/bathroom2/: bathroom2.mb  bathroom2.mtl  bathroom2.xml
example/cornell-box/: cornell-box.mtl  cornell-box.xml
example/cornellbox/: cornellbox.mb  cornellbox.mtl
example/veach-mis/: veach-mis.mb  veach-mis.mtl  veach-mis.xml
src/: loader.cpp  loader.hpp  main.cpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp
src/acceleration/: BVH.cpp  BVH.hpp
src/basicmath/: math.hpp  transformation.hpp
src/camera/: camera.hpp
src/geometry/: bound3.hpp  geometry.hpp  normal.hpp  point.hpp  vector.hpp
src/light/: arealight.cpp  arealight.hpp  directionallight.hpp  environmentlight.hpp  light.hpp  pointlight.hpp
src/material/: base_material.hpp  diffuse.hpp  mat.hpp  material.hpp  microfacet.hpp  mirror.hpp  transparent.hpp
src/ray/: ray.hpp
src/shape/: intersection.hpp  shape.hpp  sphere.hpp  triangle.cpp  triangle.hpp
src/texture/: texture.cpp  texture.hpp  texturemanager.hpp
veach-mis/: veach-mis.mtl  veach-mis.xml
